bug fix overflow-x

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,6 +34,9 @@ body {
 	scroll-behavior: smooth;
 }
 
+section {
+	overflow-x: hidden;
+}
 
 html, body {
 	// overflow-x: hidden;
